--- a/directions.html
+++ b/directions.html
@@ -127,14 +127,9 @@
         </div>
       </header>
       <div class="content">
-        <h1 class="text-center">Board of Directors</h1><br/>
-        <div class="small-8 small-push-2 text-center columns ">
-          <h3 class="condensed">Dee Dee Montgomery, President</h3>
-          <h3 class="condensed">John Snow, Vice President</h3>
-          <h3 class="condensed">Josh Grapski, Treasurer</h3>
-          <h3 class="condensed">Brittany Danahy, Secretary</h3>
-          <h3 class="condensed">Amy Mault, Director</h3>
-<br/>
+        <h1 class="text-center">Directions</h1><br/>
+        <div class="small-12 text-center columns ">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d345502.0157987348!2d-75.4988756544109!3d38.94968846621357!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzjCsDQ2JzU1LjUiTiA3NcKwMDcnMTAuNSJX!5e0!3m2!1sen!2sus!4v1478546798541" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>          <br/>
 <p>Email <a class="red" href="mailto:info@festivalofcheer.org">info@festivalofcheer.org</a> to contact any of our Board Members. </p>
         </div>
 
