--- a/donate.html
+++ b/donate.html
@@ -127,36 +127,11 @@
         </div>
       </header>
       <div class="content">
-        <h1 class="text-center">Lights Spectacular</h1><br/>
-        <h4 class="black text-center condensed">Located a the Beautiful Cape
-          Henlopen State Park!</h4>
+        <h1 class="text-center">Donate</h1><br/>
+        <h4 class="black text-center condensed">We're always seeking sponsors!</h4>
         <div class="small-8 small-push-2 text-center columns ">
-          <p>2-Miles of Dazzling Holiday LIghts viewed from the comfort and
-            warmth of your car!</p>
+          <p>Donate to the Winter Wonderfest!</p>
 
-          <div class="callout small-8 columns small-push-2 end"><h3
-              class="condensed black">Tickets</h3><br/>
-            <h6 class="condensed black">Car Passes (1 - 7 Passengers)</h6>
-            <p>$15 in Advance/$20 at the Gate</p>
-            <hr/>
-            <h6 class="condensed black">Van or "Party Bus" Passes (8 - 20
-              Passengers)</h6>
-            <p>$15 in Advance/$20 at the Gate</p>
-            <hr/>
-            <h6 class="condensed black">School Bus or Charter Bus (21 - 55
-              Passengers)</h6>
-            <p>$50 in Advance/$60 at the Gate</p>
-            <hr/>
-            <div class="small-6 columns"><img src="img/light-spectacular-1.jpg" /></div>
-            <div class="small-6 columns"><img src="img/light-spectacular-2.jpg" /></div>
-          </div>
-          <hr/>
-          <h4 class="condensed black">
-            Volunteers are Still Needed!
-          </h4>
-          <p>
-            <a class="red"href="http://www.signupgenius.com/go/4090f44a9af2faaff2-winter" target="_blank"><strong>Come join all the FUN and make Winter WonderFEST happen!
-            </strong></a></p>
         </div>
 
         <footer>
