--- a/location.html
+++ b/location.html
@@ -127,13 +127,9 @@
         </div>
       </header>
       <div class="content">
-        <h1 class="text-center">Board of Directors</h1><br/>
+        <h1 class="text-center">Cape May-Lewes Ferry</h1><br/>
         <div class="small-8 small-push-2 text-center columns ">
-          <h3 class="condensed">Dee Dee Montgomery, President</h3>
-          <h3 class="condensed">John Snow, Vice President</h3>
-          <h3 class="condensed">Josh Grapski, Treasurer</h3>
-          <h3 class="condensed">Brittany Danahy, Secretary</h3>
-          <h3 class="condensed">Amy Mault, Director</h3>
+       <p>Information about Cape May-Lewes Ferry goes here....</p>
 <br/>
 <p>Email <a class="red" href="mailto:info@festivalofcheer.org">info@festivalofcheer.org</a> to contact any of our Board Members. </p>
         </div>
