--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </button>
 
         </div>
-        <div class="row">
+        <div class="">
           <p class="text-center festival-of-cheer-presents"><strong>Festival of
             Cheer,
             Inc</strong><br/>
