--- a/shop.html
+++ b/shop.html
@@ -108,7 +108,7 @@
           </button>
 
         </div>
-        <div class="row">
+        <div class="">
           <p class="text-center festival-of-cheer-presents"><strong>Festival of
             Cheer,
             Inc</strong><br/>
