--- a/sponsors.html
+++ b/sponsors.html
@@ -97,7 +97,7 @@
           </button>
 
         </div>
-        <div class="row">
+        <div class="">
           <p class="text-center festival-of-cheer-presents"><strong>Festival of
             Cheer,
             Inc</strong><br/>
