--- a/about-us.html
+++ b/about-us.html
@@ -200,11 +200,51 @@
         </footer>
         <div class="reveal" id="tickets" data-reveal>
           <h1>Get Your Tickets!</h1>
-          <h5 class="condesned black"><strong>Purchase your single vehicle
-            tickets
+          <h5 class="condesned black"><strong>Purchase your single vehicle tickets
             below:</strong></h5>
-          <p><strong>Light
-            Spectacular:</strong>
+          <div class="row ticket-buttons">
+            <p class="small-6 right">
+              <!--
+              START OF VENDINI TAG
+              Copyright (C) 2016 Vendini, Inc.
+                   All Rights Reserved.
+
+              TROUBLESHOOTING: The HTML code below is one continuous line.  Line breaks in the code below may cause problems launching the order window.
+              -->
+
+              <script type="text/javascript"
+                      id="vendiniTicketLineLaunch_0434037ec57e1ecbf16503e91498eba6">
+                var VendiniTicketLineLaunch = VendiniTicketLineLaunch || {};
+                VendiniTicketLineLaunch['f4a668813af0368a740cf8e35bcf9883'] = VendiniTicketLineLaunch['f4a668813af0368a740cf8e35bcf9883'] || [];
+                (function () {
+                  VendiniTicketLineLaunch['f4a668813af0368a740cf8e35bcf9883'].push({
+                    id: '0434037ec57e1ecbf16503e91498eba6',
+                    type: 'tix',
+                    eventID: '1569ebb1c113f87ef370d4c0c82c14f2',
+                    image: 'http://www.wonderfestde.org/img/christmas-tickets.jpg'
+                  });
+                  if (document.body) {
+                    var buttonContainer = document.getElementById("vendiniTicketLineLaunch_0434037ec57e1ecbf16503e91498eba6").parentNode;
+                  }
+                  else {
+                    document.write('<body></body>');
+                    buttonContainer = document.body;
+                  }
+                  var span = document.createElement("span");
+                  span.id = "0434037ec57e1ecbf16503e91498eba6";
+                  buttonContainer.appendChild(span);
+                  if (!document.getElementById('VendiniTicketLineLaunch_f4a668813af0368a740cf8e35bcf9883')) {
+                    var script = document.createElement('script');
+                    script.id = 'VendiniTicketLineLaunch_f4a668813af0368a740cf8e35bcf9883';
+                    script.type = 'text/javascript';
+                    script.async = true;
+                    script.src = 'https://red.vendini.com/ticketLine/js/launch/f4a668813af0368a740cf8e35bcf9883';
+                    buttonContainer.appendChild(script);
+                  }
+                })();
+              </script>
+            </p>
+            <!-- END OF VENDINI TAG -->
             <!--
             START OF VENDINI TAG
             Copyright (C) 2016 Vendini, Inc.
@@ -212,84 +252,41 @@
 
             TROUBLESHOOTING: The HTML code below is one continuous line.  Line breaks in the code below may cause problems launching the order window.
             -->
+            <p class="small-6 left">
+              <script type="text/javascript"
+                      id="vendiniTicketLineLaunch_182e1801e8735c30e7d20a99a343c330">
+                var VendiniTicketLineLaunch = VendiniTicketLineLaunch || {};
+                VendiniTicketLineLaunch['f4a668813af0368a740cf8e35bcf9883'] = VendiniTicketLineLaunch['f4a668813af0368a740cf8e35bcf9883'] || [];
+                (function () {
+                  VendiniTicketLineLaunch['f4a668813af0368a740cf8e35bcf9883'].push({
+                    id: '182e1801e8735c30e7d20a99a343c330',
+                    type: 'tix',
+                    eventID: '26ce8ca605392013dc2fac475e02c7cc',
+                    image: 'http://www.wonderfestde.org/img/lights-tickets.jpg'
+                  });
+                  if (document.body) {
+                    var buttonContainer = document.getElementById("vendiniTicketLineLaunch_182e1801e8735c30e7d20a99a343c330").parentNode;
+                  }
+                  else {
+                    document.write('<body></body>');
+                    buttonContainer = document.body;
+                  }
+                  var span = document.createElement("span");
+                  span.id = "182e1801e8735c30e7d20a99a343c330";
+                  buttonContainer.appendChild(span);
+                  if (!document.getElementById('VendiniTicketLineLaunch_f4a668813af0368a740cf8e35bcf9883')) {
+                    var script = document.createElement('script');
+                    script.id = 'VendiniTicketLineLaunch_f4a668813af0368a740cf8e35bcf9883';
+                    script.type = 'text/javascript';
+                    script.async = true;
+                    script.src = 'https://red.vendini.com/ticketLine/js/launch/f4a668813af0368a740cf8e35bcf9883';
+                    buttonContainer.appendChild(script);
+                  }
+                })();
+              </script>
 
-            <script type="text/javascript"
-                    id="vendiniTicketLineLaunch_0434037ec57e1ecbf16503e91498eba6">
-              var VendiniTicketLineLaunch = VendiniTicketLineLaunch || {};
-              VendiniTicketLineLaunch['f4a668813af0368a740cf8e35bcf9883'] = VendiniTicketLineLaunch['f4a668813af0368a740cf8e35bcf9883'] || [];
-              (function () {
-                VendiniTicketLineLaunch['f4a668813af0368a740cf8e35bcf9883'].push({
-                  id: '0434037ec57e1ecbf16503e91498eba6',
-                  type: 'tix',
-                  eventID: '1569ebb1c113f87ef370d4c0c82c14f2',
-                  image: 'buy-tickets-now.png'
-                });
-                if (document.body) {
-                  var buttonContainer = document.getElementById("vendiniTicketLineLaunch_0434037ec57e1ecbf16503e91498eba6").parentNode;
-                }
-                else {
-                  document.write('<body></body>');
-                  buttonContainer = document.body;
-                }
-                var span = document.createElement("span");
-                span.id = "0434037ec57e1ecbf16503e91498eba6";
-                buttonContainer.appendChild(span);
-                if (!document.getElementById('VendiniTicketLineLaunch_f4a668813af0368a740cf8e35bcf9883')) {
-                  var script = document.createElement('script');
-                  script.id = 'VendiniTicketLineLaunch_f4a668813af0368a740cf8e35bcf9883';
-                  script.type = 'text/javascript';
-                  script.async = true;
-                  script.src = 'https://red.vendini.com/ticketLine/js/launch/f4a668813af0368a740cf8e35bcf9883';
-                  buttonContainer.appendChild(script);
-                }
-              })();
-            </script>
-
-            <!-- END OF VENDINI TAG -->
-          </p>
-          <p><strong>Christmas Village: </strong>
-            <!--
-            START OF VENDINI TAG
-            Copyright (C) 2016 Vendini, Inc.
-                 All Rights Reserved.
-
-            TROUBLESHOOTING: The HTML code below is one continuous line.  Line breaks in the code below may cause problems launching the order window.
-            -->
-
-            <script type="text/javascript"
-                    id="vendiniTicketLineLaunch_182e1801e8735c30e7d20a99a343c330">
-              var VendiniTicketLineLaunch = VendiniTicketLineLaunch || {};
-              VendiniTicketLineLaunch['f4a668813af0368a740cf8e35bcf9883'] = VendiniTicketLineLaunch['f4a668813af0368a740cf8e35bcf9883'] || [];
-              (function () {
-                VendiniTicketLineLaunch['f4a668813af0368a740cf8e35bcf9883'].push({
-                  id: '182e1801e8735c30e7d20a99a343c330',
-                  type: 'tix',
-                  eventID: '26ce8ca605392013dc2fac475e02c7cc',
-                  image: 'buy-tickets-now.png'
-                });
-                if (document.body) {
-                  var buttonContainer = document.getElementById("vendiniTicketLineLaunch_182e1801e8735c30e7d20a99a343c330").parentNode;
-                }
-                else {
-                  document.write('<body></body>');
-                  buttonContainer = document.body;
-                }
-                var span = document.createElement("span");
-                span.id = "182e1801e8735c30e7d20a99a343c330";
-                buttonContainer.appendChild(span);
-                if (!document.getElementById('VendiniTicketLineLaunch_f4a668813af0368a740cf8e35bcf9883')) {
-                  var script = document.createElement('script');
-                  script.id = 'VendiniTicketLineLaunch_f4a668813af0368a740cf8e35bcf9883';
-                  script.type = 'text/javascript';
-                  script.async = true;
-                  script.src = 'https://red.vendini.com/ticketLine/js/launch/f4a668813af0368a740cf8e35bcf9883';
-                  buttonContainer.appendChild(script);
-                }
-              })();
-            </script>
-
-            <!-- END OF VENDINI TAG -->
-          </p>
+              <!-- END OF VENDINI TAG -->
+            </p></div>
           <!-- <p><a data-open="emailSignup" href="#">Click here to join our email list to
             know when they are available!</a></p> -->
           <br/>
@@ -300,8 +297,7 @@
             tickets:</strong>
             <div class="row text-center">
 
-              <div class="small-12 columns"><p><input id="name"
-                                                      placeholder="name"
+              <div class="small-12 columns"><p><input id="name" placeholder="name"
                                                       name="name" type="text"
                                                       value=""/></p></div>
               <div class="small-12 medium-6 columns"><p><input id="email"
