--- a/directions.html
+++ b/directions.html
@@ -132,7 +132,43 @@
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d345502.0157987348!2d-75.4988756544109!3d38.94968846621357!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzjCsDQ2JzU1LjUiTiA3NcKwMDcnMTAuNSJX!5e0!3m2!1sen!2sus!4v1478546798541" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>          <br/>
 <p>Email <a class="red" href="mailto:info@festivalofcheer.org">info@festivalofcheer.org</a> to contact any of our Board Members. </p>
         </div>
+        <div class="row">
+          <div data-equalizer>
+            <div class="small-12 large-6 columns">
+              <div data-equalizer-watch class="callout-red">
 
+                <div class="row">
+                  <div class="small-6 columns tickets">
+                    <a href="#"><h4>Get Your
+                      Tickets</h4></a>
+                    <p>Tickets are on sale now! Grab your tickets in advance for the best price - first come first serve.</p>
+
+                  </div>
+                  <div class="small-6 columns tickets"><a href="#" class="tickets">
+                    <img src="img/ticket.svg"/></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="small-12 large-6 columns">
+              <div data-equalizer-watch class=" callout-red get-here">
+                <div class="small-6">
+                  <a
+                      href="https://www.google.com/maps/place/Cape+May+-+Lewes+Ferry,+Lewes,+DE+19958/@38.903357,-75.8171152,10z/data=!4m5!3m4!1s0x89b8adc7bcf3aff5:0x77f6f7f7a5b806ac!8m2!3d38.7825573!4d-75.1194678"
+                      target="_blank"><h4>Get Here</h4></a>
+                  <p>The events will take place at Cape Henlopen State Park and the Cape May-Lewes Ferry in Lewes, Delaware!</p></div>
+                <div><a
+                    href="https://www.google.com/maps/place/Cape+May+-+Lewes+Ferry,+Lewes,+DE+19958/@38.903357,-75.8171152,10z/data=!4m5!3m4!1s0x89b8adc7bcf3aff5:0x77f6f7f7a5b806ac!8m2!3d38.7825573!4d-75.1194678"
+                    target="_blank"><img
+                    src="img/map.png"/></a>
+
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <br/>
         <footer>
           <div class="row">
             <div
