Updating homepage call to actions

--- a/christmas-village.html
+++ b/christmas-village.html
@@ -127,7 +127,7 @@
         </div>
       </header>
       <div class="content">
-        <h1 class="text-center">Lights Spectacular</h1><br/>
+        <h1 class="text-center">Christmas Village</h1><br/>
         <h4 class="black text-center condensed">Located a the Beautiful Cape
           Henlopen State Park!</h4>
         <div class="small-8 small-push-2 text-center columns ">
