--- a/index.html
+++ b/index.html
@@ -43,17 +43,22 @@
         <li><a href="sponsors.html">Sponsors</a></li>
         <li><a href="contact.html">Contact</a>
           <ul class="right menu social small-12">
-            <li class="small-4 left"><a href="https://www.facebook.com/WinterWondeFEST/?fref=ts" target="_blank"><i class="fa fa-facebook"></i></a>
+            <li class="small-4 left"><a
+                href="https://www.facebook.com/WinterWondeFEST/?fref=ts"
+                target="_blank"><i class="fa fa-facebook"></i></a>
             </li>
-            <li class="small-4 left"><a href="https://www.instagram.com/wonderfestde/?hl=en" target="_blank"><i class="fa fa-instagram"></i></a>
+            <li class="small-4 left"><a
+                href="https://www.instagram.com/wonderfestde/?hl=en"
+                target="_blank"><i class="fa fa-instagram"></i></a>
             </li>
-            <li class="small-4 left"><a href="https://twitter.com/WonderFESTDE" target="_blank"><i
+            <li class="small-4 left"><a href="https://twitter.com/WonderFESTDE"
+                                        target="_blank"><i
                 class="fa fa-twitter"></i></a></li>
           </ul>
           <ul class="small-12">
             <li><a href="directions.html">Directions</a></li>
             <li><a href="location.html">Location</a></li>
-            <li class="tickets"><a href="#" >Tickets</a></li>
+            <li class="tickets"><a href="#">Tickets</a></li>
           </ul>
         </li>
       </ul>
@@ -65,7 +70,8 @@
           <ul class="text-center main-menu">
             <li class="hide-for-small-only"><a href="explore.html">EXPLORE</a>
               <ul>
-                <li><a href="lights-spectacular.html">Lights Spectacular</a></li>
+                <li><a href="lights-spectacular.html">Lights Spectacular</a>
+                </li>
                 <li><a href="christmas-village.html">Christmas Village</a></li>
               </ul>
             </li>
@@ -78,19 +84,23 @@
                 <li><a href="donate.html">Donate</a></li>
                 <li><a href="volunteer.html">Volunteer</a></li>
                 <li><a href="sponsors.html">Sponsors</a></li>
-              </ul></li>
+              </ul>
+            </li>
             </li>
             <li class="hide-for-large get-tickets-mobile tickets"><a href="#"
-                                                             class="tickets">Get
+                                                                     class="tickets">Get
               Tickets</a><span class="show-for-small-only"><img
                 src="img/ticket.svg"/></span></li>
 
 
           </ul>
           <ul class="right show-for-large social menu">
-            <li><a href="https://www.facebook.com/WinterWondeFEST/?fref=ts"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="https://www.instagram.com/wonderfestde/?hl=en" target="_blank"><i class="fa fa-instagram"></i></a></li>
-            <li><a href="https://twitter.com/WonderFESTDE" target="_blank"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="https://www.facebook.com/WinterWondeFEST/?fref=ts"><i
+                class="fa fa-facebook"></i></a></li>
+            <li><a href="https://www.instagram.com/wonderfestde/?hl=en"
+                   target="_blank"><i class="fa fa-instagram"></i></a></li>
+            <li><a href="https://twitter.com/WonderFESTDE" target="_blank"><i
+                class="fa fa-twitter"></i></a></li>
           </ul>
           <button type="button" class="right off-canvas-button"
                   data-toggle="offCanvasRight">
@@ -105,12 +115,9 @@
             <em>presents</em></p>
 
 
-          <div class="logo text-center"><a href="index.html"><img alt="Winter WonderFEST"
-                                             src="img/logo.png"/></a></div>
-          <div class="tickets text-center "><a href="#"
-                                               class="hide-for-small-only"><img
-              alt="Winter WonderFEST Tickets" src="img/ticket.svg"/></a>
-          </div>
+          <div class="logo text-center"><a href="index.html"><img
+              alt="Winter WonderFEST"
+              src="img/logo.png"/></a></div>
           <div class="pointer pointer-right"><span><em>Takes Place</em><strong>November 18 - January 1</strong></span>
           </div>
           <div class="pointer pointer-left"><span><em>For More Info</em><a
@@ -119,40 +126,31 @@
         </div>
       </header>
       <div class="row lights-carnival">
-        <div
-            class="callout primary small-10 medium-5 large-3 large-push-3 medium-push-1 small-push-1">
-          <h2>Light<br/>Spectacular!</h2>
-          <hr/>
-          <h4>Cape Henlopen State Park</h4>
-          <hr/>
-          <p>Featuring Over 60 Dazzling Light Displays</p>
-          <p>2 Mile Drive-Through Holiday Light Show</p>
-          <p>In-Car Scavenger Hunt</p>
-          <p>3-D Experience</p>
-          <h4 class="condensed text-center">
-            <div class="tickets"><a class="button alert large" href="#">Buy
-              Tickets
-              Now</a></div>
-          </h4>
+        <div class="small-10 small-push-1 large-8 large-push-2">
+          <div
+              class="callout lights small-12 medium-6 columns">
+            <h2>Light Spectacular!</h2>
+            <p><a href="lights-spectacular.html" class="red"><small>Take your family through a wonderful light show from the comfort of your car!</small></a></p>
 
-        </div>
-        <div
-            class="callout secondary small-10 medium-5 large-3 large-push-3 medium-push-1 small-push-2">
-          <h2>Christmas Village!</h2>
-          <hr/>
-          <h4>Cape May-Lewes Ferry Terminal Grounds</h4>
-          <hr/>
-          <p>Thrilling Carnival Rides and Amusements</p>
-          <p>Ice Skating at the NEW iRink</p>
-          <p>Crafts and activities at Santa's Workshop</p>
-          <p>Special Events and Concerts</p>
-          <small class="condensed red">*Final activities subject to change
-          </small>
-          <h4 class="condensed text-center">
-            <div class="tickets"><a class="button alert large" href="#">Buy
-              Tickets
-              Now</a></div>
-          </h4>
+          </div>
+          <div
+              class="callout village small-12 medium-6 columns">
+            <h2>Christmas Village!</h2>
+            <p><a href="christmas-village.html" class="red"><small>Enjoy our Christmas Village in the beautiful Cape Henlopen State Park!</small></a></p>
+
+          </div>
+          <div
+              class="callout volunteer small-12 medium-6 columns">
+            <h2>Volunteer!</h2>
+            <p><a href="volunteer.html" class="red"><small>Want to help out? We could use it! Learn more about becoming a Volunteer..</small></a></p>
+
+          </div>
+          <div
+              class="callout donate small-12 medium-6 columns end">
+            <h2>Donate!</h2>
+            <p><a href="donate.html" class="red"><small>Help make sure this event becomes a holiday tradition! Donate for our future!</small></a></p>
+
+          </div>
         </div>
       </div>
       <div class="callout-row dark-blue">
@@ -449,7 +447,8 @@
             </script>
 
             <!-- END OF VENDINI TAG -->
-          </p></div>
+          </p>
+        </div>
         <!-- <p><a data-open="emailSignup" href="#">Click here to join our email list to
           know when they are available!</a></p> -->
         <br/>
@@ -555,6 +554,7 @@
 "Mo-Su 19:00-23:00"],
 "priceRange":"0"
 }
+
 
 
 
