--- a/lights-spectacular.html
+++ b/lights-spectacular.html
@@ -128,14 +128,18 @@
       </header>
       <div class="content">
         <h1 class="text-center">Lights Spectacular</h1><br/>
-        <h4 class="black text-center condensed">Located a the Beautiful Cape
-          Henlopen State Park!</h4>
+        <h4 class="black text-center condensed">Light show begins at the Cape Henlopen State Park Fee Booth!        </h4>
         <div class="small-8 small-push-2 text-center columns ">
-          <p>2-Miles of Dazzling Holiday LIghts viewed from the comfort and
-            warmth of your car!</p>
+          <p>Expected Route Time: 15-20 minutes!</p>
 
-          <div class="callout small-8 columns small-push-2 end"><h3
-              class="condensed black">Tickets</h3><br/>
+          <div class="callout small-8 tickets columns small-push-2 end"><h3
+              class="condensed black ">Tickets</h3><br/>
+            <h4 class="condensed">Save Time & Purchase Online!</h4>
+              <p>Tickets may be redeemed for ANY day we are open!<br/>
+              All Pre-Paid ticket holders will have an express lane to enter the show!</p>
+            <a href="#" class="button alert">Purchase Tickets</a>
+            <br/>
+            <h5 class="condensed">Prices</h5>
             <h6 class="condensed black">Car Passes (1 - 7 Passengers)</h6>
             <p>$15 in Advance/$20 at the Gate</p>
             <hr/>
@@ -147,16 +151,26 @@
               Passengers)</h6>
             <p>$50 in Advance/$60 at the Gate</p>
             <hr/>
+
             <div class="small-6 columns"><img src="img/light-spectacular-1.jpg" /></div>
             <div class="small-6 columns"><img src="img/light-spectacular-2.jpg" /></div>
+            <div class="small-12 columns"><br/>
+            <small>Our eco-minded light displays are created and designed by <a href="http://brandano.com" class="red" target="_blank">Brandano Displays</a></small>
+            </div>
+            <br/>
+            <div class="small-12 columns">
+            <br/>
+              <h4 class="condensed black">
+              Volunteers are Still Needed!
+            </h4>
+            <p>
+              <a class="red"href="http://www.signupgenius.com/go/4090f44a9af2faaff2-winter" target="_blank"><strong>Come join all the FUN and make Winter WonderFEST happen!
+              </strong></a></p>
+          </div>
           </div>
           <hr/>
-          <h4 class="condensed black">
-            Volunteers are Still Needed!
-          </h4>
-          <p>
-            <a class="red"href="http://www.signupgenius.com/go/4090f44a9af2faaff2-winter" target="_blank"><strong>Come join all the FUN and make Winter WonderFEST happen!
-            </strong></a></p>
+
+
         </div>
 <div class="row">
         <div data-equalizer>
