--- a/shop.html
+++ b/shop.html
@@ -126,26 +126,58 @@
           </div>
         </div>
       </header>
-      <div class="content">
-        <h1 class="text-center">Tax Free Shopping!</h1><br/>
+      <div class="content shop-page">
         <h4 class="black text-center condensed"></h4>
-        <div class="small-8 small-push-2 text-center columns ">
-          <p>Take advantage of Delaware's tax-free shopping while you're here!</p>
+        <div class="row shops">
 
-          <div class="callout small-8 columns small-push-2 end"><h3
-              class="condensed black">Nearby Outlets</h3><br/>
-            <h6 class="condensed black">Name</h6>
-            <h6 class="condensed black">Name</h6>
-            <h6 class="condensed black">Name</h6>
-            <hr/>
+          <div class="small-12 medium-6 text-center  columns ">
+            <h2 class="text-center">Looking for a New or Used Car?</h2>
+              <a href="http://www.prestonmotor.com/" target="_blank"><img
+                  src="img/sponsors/preston.jpg"/>
+            <h5 class="condensed black">Preston Automotive Group</h5></a>
+
           </div>
+
+          <div class="small-12 medium-6 columns text-center">
+          <h2 class="text-center">Looking for Premier Shopping?</h2>
+            <a href="https://www.tangeroutlet.com/rehoboth/directory"
+               target="_blank" class="red">
+              <img src="img/tanger.png"/>
+              <h5 class="condensed black">Tanger Outlets</h5>
+            </a>
+          </div>
+
+          <h2 class="text-center">Looking for Local Shopping?</h2>
+          <div class="small-12 medium-4 columns text-center">
+            <a href="http://www.leweschamber.com/organizations/type/places-shop"
+               target="_blank" class="red">
+              <img src="img/lewes.png"/>
+              <h5 class="condensed black">Check out Beautiful Downtown
+                Lewes</h5>
+            </a>
+          </div>
+          <div class="small-12 medium-4 columns text-center">
+            <a href="http://www.leweschamber.com/organizations/type/places-shop"
+               target="_blank" class="red">
+              <img src="img/rehoboth.png"/>
+              <h5 class="condensed black"> Check out the Rehoboth Beach & Dewey
+                Beach Area! </h5>
+            </a>
+          </div>
+          <div class="small-12 medium-4 columns text-center">
+            <a href="http://www.leweschamber.com/organizations/type/places-shop"
+               target="_blank" class="red">
+              <img src="img/logo-tab.png"/>
+              <h5 class="condensed black">Don't forget about the Bethany Beach &
+                Fenwick Island shops! </h5>
+            </a>
+          </div>
+
           <hr/>
-          <h4 class="condensed black">
-            Volunteers are Still Needed!
-          </h4>
-          <p>
-            <a class="red"href="http://www.signupgenius.com/go/4090f44a9af2faaff2-winter" target="_blank"><strong>Come join all the FUN and make Winter WonderFEST happen!
-            </strong></a></p>
+
+
+          <h6 class="condensed small-12 columns text-center">* For local shops, we recommend
+            you call or view their websites for business hours.</h6>
         </div>
         <div class="row">
           <div data-equalizer>
@@ -156,10 +188,12 @@
                   <div class="small-6 columns tickets">
                     <a href="#"><h4>Get Your
                       Tickets</h4></a>
-                    <p>Tickets are on sale now! Grab your tickets in advance for the best price - first come first serve.</p>
+                    <p>Tickets are on sale now! Grab your tickets in advance for
+                      the best price - first come first serve.</p>
 
                   </div>
-                  <div class="small-6 columns tickets"><a href="#" class="tickets">
+                  <div class="small-6 columns tickets"><a href="#"
+                                                          class="tickets">
                     <img src="img/ticket.svg"/></a>
                   </div>
                 </div>
@@ -171,7 +205,8 @@
                   <a
                       href="https://www.google.com/maps/place/Cape+May+-+Lewes+Ferry,+Lewes,+DE+19958/@38.903357,-75.8171152,10z/data=!4m5!3m4!1s0x89b8adc7bcf3aff5:0x77f6f7f7a5b806ac!8m2!3d38.7825573!4d-75.1194678"
                       target="_blank"><h4>Get Here</h4></a>
-                  <p>The events will take place at Cape Henlopen State Park and the Cape May-Lewes Ferry in Lewes, Delaware!</p></div>
+                  <p>The events will take place at Cape Henlopen State Park and
+                    the Cape May-Lewes Ferry in Lewes, Delaware!</p></div>
                 <div><a
                     href="https://www.google.com/maps/place/Cape+May+-+Lewes+Ferry,+Lewes,+DE+19958/@38.903357,-75.8171152,10z/data=!4m5!3m4!1s0x89b8adc7bcf3aff5:0x77f6f7f7a5b806ac!8m2!3d38.7825573!4d-75.1194678"
                     target="_blank"><img
@@ -227,7 +262,8 @@
         </footer>
         <div class="reveal" id="tickets" data-reveal>
           <h1>Get Your Tickets!</h1>
-          <h5 class="condesned black"><strong>Purchase your single vehicle tickets
+          <h5 class="condesned black"><strong>Purchase your single vehicle
+            tickets
             below:</strong></h5>
           <div class="row ticket-buttons">
             <p class="small-6 right">
@@ -313,7 +349,8 @@
               </script>
 
               <!-- END OF VENDINI TAG -->
-            </p></div>
+            </p>
+          </div>
           <!-- <p><a data-open="emailSignup" href="#">Click here to join our email list to
             know when they are available!</a></p> -->
           <br/>
@@ -324,7 +361,8 @@
             tickets:</strong>
             <div class="row text-center">
 
-              <div class="small-12 columns"><p><input id="name" placeholder="name"
+              <div class="small-12 columns"><p><input id="name"
+                                                      placeholder="name"
                                                       name="name" type="text"
                                                       value=""/></p></div>
               <div class="small-12 medium-6 columns"><p><input id="email"
@@ -419,6 +457,10 @@
 "Mo-Su 19:00-23:00"],
 "priceRange":"0"
 }
+
+
+
+
 
 
 
