Adding test content for viewing

--- a/donate.html
+++ b/donate.html
@@ -128,10 +128,22 @@
       </header>
       <div class="content">
         <h1 class="text-center">Donate</h1><br/>
-        <h4 class="black text-center condensed">We're always seeking sponsors!</h4>
+        <h4 class="black text-center condensed">Help us create a brighter future for Sussex County!</h4>
         <div class="small-8 small-push-2 text-center columns ">
-          <p>Donate to the Winter Wonderfest!</p>
+          <p>Make a tax deductible donation today to support our Festival of Cheer Fund. Our organization will use your donation to award grants to nonprofit organizations that serve Sussex County.
 
+            We have a goal of raising $50,000 this year to award to organizations who focus on education, healthcare, environment, and arts & culture. </p>
+          <!--
+          START OF VENDINI TAG
+          Copyright (C) 2016 Vendini, Inc.
+               All Rights Reserved.
+
+          TROUBLESHOOTING: The HTML code below is one continuous line.  Line breaks in the code below may cause problems launching the order window.
+          -->
+
+          <a href="https://red.vendini.com/donation-software.html?d=a0f2e0c6360f270e5eefdaf927163374&t=donation" onclick="window.open('https://red.vendini.com/donation-software.html?d=a0f2e0c6360f270e5eefdaf927163374&t=donation', 'order_window', 'width=611,height=510,status=yes,left='+((window.screen.width - 611)/2)+',top='+((window.screen.height - 510)/2.5)).focus();return false;" onMouseOver="window.status='Donate now!';return true;" onMouseOut="window.status='';return true;" class="button alert large"><i class="fa fa-gift"></i> Donate Today</i></a>
+
+          <!-- END OF VENDINI TAG -->
         </div>
         <div class="row">
           <div data-equalizer>
