--- a/stay.html
+++ b/stay.html
@@ -129,23 +129,53 @@
       <div class="content">
         <h1 class="text-center">Looking to stay the night?</h1><br/>
         <h4 class="black text-center condensed"></h4>
-        <div class="small-8 small-push-2 text-center columns ">
+        <div class="small-10 small-push-1 text-center columns ">
           <p>Take advantage of all the Delaware Beaches have to offer!</p>
 
-          <div class="callout small-8 columns small-push-2 end"><h3
-              class="condensed black">Nearby Hotels</h3><br/>
-            <h6 class="condensed black">Name</h6>
-            <h6 class="condensed black">Name</h6>
-            <h6 class="condensed black">Name</h6>
+          <div class=""><h3 class="condensed black">Nearby Hotels</h3><br/>
+
+            <ul class="small-up-1 medium-up-3 menu">
+              <li class="column"><h6 class="condensed black"><a
+                  href="https://deweybeach.place.hyatt.com/en/hotel/home.html"
+                  class="black" target="_blank"><img width="200"
+                                                     src="img/sponsors/hyatt-place.jpg"/><br/>Dewey
+                Beach Hyatt</a></h6></li>
+              <li class="column"><h6 class="condensed black"><a
+                  href="http://www.comfortinnrehoboth.com/" class="black"
+                  target="_blank"><img width="80"
+                                       src="img/comfort-inn.png"/><br/>Comfort
+                Inn & Suites</a></h6></li>
+              <li class="column"><h6 class="condensed black"><a
+                  href="http://www.atlanticsandshotel.com/" class="black"
+                  target="_blank"><img width="200"
+                                       src="img/sponsors/atlanic-sands.JPG"/><br/>Atlantic
+                Sands</a></h6></li>
+              <li class="column"><h6 class="condensed black"><a
+                  href="http://www.dogfish.com/inn" class="black"
+                  target="_blank"><img width="200"
+                                       src="img/sponsors/dogfish.jpg"/><br/>Dogfish
+                Inn</a></h6></li>
+              <li class="column"><h6 class="condensed black"><a
+                  href="http://www.marriott.com/hotels/travel/rehfs-fairfield-inn-and-suites-rehoboth-beach/"
+                  class="black" target="_blank"><img width="200"
+                                                     src="img/fairfield.jpeg"/><br/>Fairfield
+                Inn</a></h6></li>
+              <li class="column"><h6 class="condensed black"><a
+                  href="http://avenueinn.com/" class="black"
+                  target="_blank"><img width="200"
+                                       src="img/avenueinn.png"/><br/>The Avenue</a>
+              </h6></li>
+            </ul>
+            <div class="small-12 columns"><br/>
+              <h5 class="red condensed">Don't forget to mention "Winter WonderFEST!"
+              </h5>
+              <p>Looking for a place to eat? Visit on one of our MANY restaurant partners. <a href="sponsors.html" class="red">Find them here.</a> </p>
+            </div>
+
             <hr/>
           </div>
           <hr/>
-          <h4 class="condensed black">
-            Volunteers are Still Needed!
-          </h4>
-          <p>
-            <a class="red"href="http://www.signupgenius.com/go/4090f44a9af2faaff2-winter" target="_blank"><strong>Come join all the FUN and make Winter WonderFEST happen!
-            </strong></a></p>
+
         </div>
         <div class="row">
           <div data-equalizer>
@@ -156,10 +186,12 @@
                   <div class="small-6 columns tickets">
                     <a href="#"><h4>Get Your
                       Tickets</h4></a>
-                    <p>Tickets are on sale now! Grab your tickets in advance for the best price - first come first serve.</p>
+                    <p>Tickets are on sale now! Grab your tickets in advance for
+                      the best price - first come first serve.</p>
 
                   </div>
-                  <div class="small-6 columns tickets"><a href="#" class="tickets">
+                  <div class="small-6 columns tickets"><a href="#"
+                                                          class="tickets">
                     <img src="img/ticket.svg"/></a>
                   </div>
                 </div>
@@ -171,7 +203,8 @@
                   <a
                       href="https://www.google.com/maps/place/Cape+May+-+Lewes+Ferry,+Lewes,+DE+19958/@38.903357,-75.8171152,10z/data=!4m5!3m4!1s0x89b8adc7bcf3aff5:0x77f6f7f7a5b806ac!8m2!3d38.7825573!4d-75.1194678"
                       target="_blank"><h4>Get Here</h4></a>
-                  <p>The events will take place at Cape Henlopen State Park and the Cape May-Lewes Ferry in Lewes, Delaware!</p></div>
+                  <p>The events will take place at Cape Henlopen State Park and
+                    the Cape May-Lewes Ferry in Lewes, Delaware!</p></div>
                 <div><a
                     href="https://www.google.com/maps/place/Cape+May+-+Lewes+Ferry,+Lewes,+DE+19958/@38.903357,-75.8171152,10z/data=!4m5!3m4!1s0x89b8adc7bcf3aff5:0x77f6f7f7a5b806ac!8m2!3d38.7825573!4d-75.1194678"
                     target="_blank"><img
@@ -227,7 +260,8 @@
         </footer>
         <div class="reveal" id="tickets" data-reveal>
           <h1>Get Your Tickets!</h1>
-          <h5 class="condesned black"><strong>Purchase your single vehicle tickets
+          <h5 class="condesned black"><strong>Purchase your single vehicle
+            tickets
             below:</strong></h5>
           <div class="row ticket-buttons">
             <p class="small-6 right">
@@ -313,7 +347,8 @@
               </script>
 
               <!-- END OF VENDINI TAG -->
-            </p></div>
+            </p>
+          </div>
           <!-- <p><a data-open="emailSignup" href="#">Click here to join our email list to
             know when they are available!</a></p> -->
           <br/>
@@ -324,7 +359,8 @@
             tickets:</strong>
             <div class="row text-center">
 
-              <div class="small-12 columns"><p><input id="name" placeholder="name"
+              <div class="small-12 columns"><p><input id="name"
+                                                      placeholder="name"
                                                       name="name" type="text"
                                                       value=""/></p></div>
               <div class="small-12 medium-6 columns"><p><input id="email"
@@ -419,6 +455,7 @@
 "Mo-Su 19:00-23:00"],
 "priceRange":"0"
 }
+
 
 
 
