--- a/volunteer.html
+++ b/volunteer.html
@@ -132,41 +132,32 @@
         <div class="small-8 small-push-2 text-center columns ">
           <p>The Winter Wonderfest needs help!</p>
 
+          <div class="small-12 medium-6 columns">
+            <h4 class="condensed black">Light Spectacular</h4>
+            <p>
+              <small>We need help with the following volunteer positions:
+              </small>
+              <br/>
+              <strong>Cashiers</strong><br/>
+              <strong>Gate Greeters</strong><br/>
+              <strong>Route Guides</strong></p>
+            <a href="http://www.signupgenius.com/go/4090f44a9af2faaff2-winter" target="_blank" class="button alert small-8">Ready to start?</a>
+          </div>
+
+          <div class="small-12 medium-6 columns ">
+            <h4 class="condensed black">Christmas Village</h4>
+            <p>
+              <small>We need help with the following volunteer positions:
+              </small>
+              <br/>
+              <strong>Cashiers</strong><br/>
+              <strong>Information Booth</strong><br/>
+              <strong>Skate Shop</strong></p>
+            <a href="http://www.signupgenius.com/go/4090f44a9af2faaff2-winter" target="_blank" class="button alert small-8">Ready to start?</a>
+          </div>
+
         </div>
         <div class="row">
-          <div data-equalizer>
-            <div class="small-12 large-6 columns">
-              <div data-equalizer-watch class="callout-red">
-
-                <div class="row">
-                  <div class="small-6 columns tickets">
-                    <a href="#"><h4>Get Your
-                      Tickets</h4></a>
-                    <p>Tickets are on sale now! Grab your tickets in advance for the best price - first come first serve.</p>
-
-                  </div>
-                  <div class="small-6 columns tickets"><a href="#" class="tickets">
-                    <img src="img/ticket.svg"/></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="small-12 large-6 columns">
-              <div data-equalizer-watch class=" callout-red get-here">
-                <div class="small-6">
-                  <a
-                      href="https://www.google.com/maps/place/Cape+May+-+Lewes+Ferry,+Lewes,+DE+19958/@38.903357,-75.8171152,10z/data=!4m5!3m4!1s0x89b8adc7bcf3aff5:0x77f6f7f7a5b806ac!8m2!3d38.7825573!4d-75.1194678"
-                      target="_blank"><h4>Get Here</h4></a>
-                  <p>The events will take place at Cape Henlopen State Park and the Cape May-Lewes Ferry in Lewes, Delaware!</p></div>
-                <div><a
-                    href="https://www.google.com/maps/place/Cape+May+-+Lewes+Ferry,+Lewes,+DE+19958/@38.903357,-75.8171152,10z/data=!4m5!3m4!1s0x89b8adc7bcf3aff5:0x77f6f7f7a5b806ac!8m2!3d38.7825573!4d-75.1194678"
-                    target="_blank"><img
-                    src="img/map.png"/></a>
-
-                </div>
-              </div>
-            </div>
-          </div>
 
         </div>
         <br/>
@@ -213,7 +204,8 @@
         </footer>
         <div class="reveal" id="tickets" data-reveal>
           <h1>Get Your Tickets!</h1>
-          <h5 class="condesned black"><strong>Purchase your single vehicle tickets
+          <h5 class="condesned black"><strong>Purchase your single vehicle
+            tickets
             below:</strong></h5>
           <div class="row ticket-buttons">
             <p class="small-6 right">
@@ -299,7 +291,8 @@
               </script>
 
               <!-- END OF VENDINI TAG -->
-            </p></div>
+            </p>
+          </div>
           <!-- <p><a data-open="emailSignup" href="#">Click here to join our email list to
             know when they are available!</a></p> -->
           <br/>
@@ -310,7 +303,8 @@
             tickets:</strong>
             <div class="row text-center">
 
-              <div class="small-12 columns"><p><input id="name" placeholder="name"
+              <div class="small-12 columns"><p><input id="name"
+                                                      placeholder="name"
                                                       name="name" type="text"
                                                       value=""/></p></div>
               <div class="small-12 medium-6 columns"><p><input id="email"
@@ -405,6 +399,7 @@
 "Mo-Su 19:00-23:00"],
 "priceRange":"0"
 }
+
         </script>
         <script src="bower_components/jquery/dist/jquery.js"></script>
         <script src="bower_components/what-input/what-input.js"></script>
