Adding test content for viewing

--- a/christmas-village.html
+++ b/christmas-village.html
@@ -25,7 +25,7 @@
           <span></span>
           <a href="explore.html">Explore</a>
           <ul>
-            <li><a href="lights-spectacular.html">Lights Spectacular</a></li>
+            <li><a href="lights-spectacular.html">Light Spectacular</a></li>
             <li><a href="christmas-village.html">Christmas Village</a></li>
           </ul>
         </li>
@@ -70,7 +70,7 @@
           <ul class="text-center main-menu">
             <li class="hide-for-small-only"><a href="explore.html">EXPLORE</a>
               <ul>
-                <li><a href="lights-spectacular.html">Lights Spectacular</a>
+                <li><a href="lights-spectacular.html">Light Spectacular</a>
                 </li>
                 <li><a href="christmas-village.html">Christmas Village</a></li>
               </ul>
@@ -140,7 +140,8 @@
             person! </p>
           <br/>
           <div class="small-12 medium-4 columns "><h3
-              class="condensed black">Outdoor Attractions</h3><br/>
+              class="condensed black">Outdoor Attractions</h3>
+            <p><img src="img/skate.jpg" /><br/></p>
             <h6 class="condensed black">Giant 70' Ferris Wheel!</h6>
             <h6 class="condensed black">Ice Skating!</h6>
             <h6 class="condensed black">Carnival Rides!</h6>
@@ -149,7 +150,8 @@
               Stage!</h6>
           </div>
           <div class="small-12 medium-4 columns "><h3
-              class="condensed black">Indoor Attractions</h3><br/>
+              class="condensed black">Indoor Attractions</h3>
+            <p><img src="img/santa.jpg" /></p>
             <h6 class="condensed black">Santa's Workshop featuring "Create Your
               Own"...</h6>
             <h6 class="condensed black">Gingerbread House | Snow Globe |
@@ -164,13 +166,13 @@
               class="small-12 medium-4 columns">
             <h3
                 class="condensed black">Save Time & Buy Online!</h3>
-
-            <p class="tickets">$10 for 10 (Not Available Online!)<br/>
+           <p><img src="img/ferris.jpg" /></p>
+            <h6 class="condensed black tickets">$10 for 10 (Not Available Online!)<br/>
               $20 for 20 (Not Available Online!)<br/>
               $40 for 60 - FAMILY FUN SAVINGS<br/>
               $60 for 100 - XTRA FAMILY FUN SAVINGS<br/>
               <br/>
-              <a href="#" class="small-8 button alert">Buy Tickets</a></p>
+              <a href="#" class="small-8 button alert">Buy Tickets</a></h6>
 
           </div>
           <small>Tickets can be used for ANY night! Come back any time and
